--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -1,8 +1,67 @@
-﻿@{
+﻿@inject Microsoft.Extensions.Configuration.IConfiguration config
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+
+<div class="row mb-2">
+    <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <strong class="d-inline-block mb-2 text-primary">Twilio</strong>
+                <div class="mb-1 text-muted">@ViewBag.SendGridKey</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <strong class="d-inline-block mb-2 text-primary">Twilio</strong>
+                <div class="mb-1 text-muted">@ViewBag.TwilioAuthToken</div>
+                <div class="mb-1 text-muted">@ViewBag.TwilioAuthSid</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row mb-2">
+    <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <strong class="d-inline-block mb-2 text-primary">Twilio</strong>
+                <div class="mb-1 text-muted">@ViewBag.ThirdLevelsetting</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="row mb-2">
+    <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <strong class="d-inline-block mb-2 text-primary">Twilio from Controller</strong>
+                <div class="mb-1 text-muted">@ViewBag.TwilioAuthToken</div>
+                <div class="mb-1 text-muted">@ViewBag.TwilioAuthSid</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <strong class="d-inline-block mb-2 text-primary">Twilio from Injected View</strong>
+                <div class="mb-1 text-muted">@config.GetSection("Twilio:AuthToken").Value</div>
+                <div class="mb-1 text-muted">@config.GetSection("Twilio:AccountSid").Value</div>
+            </div>
+        </div>
+    </div>
 </div>
