--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject Microsoft.Extensions.Configuration.IConfiguration config
+@inject Microsoft.Extensions.Options.IOptions<SocialLoginsettings> socialLoginOptions
 
 @{
     ViewData["Title"] = "Home Page";
@@ -71,7 +72,7 @@
             <div class="card-body d-flex flex-column align-items-start">
                 <strong class="d-inline-block mb-2 text-primary">Social Login</strong>
                 <div class="mb-1 text-muted">@ViewBag.FacebookKey</div>
-                <div class="mb-1 text-muted">@ViewBag.GoogleKey</div>
+                <div class="mb-1 text-muted">@socialLoginOptions.Value.GoogleSettings.Key</div>
             </div>
         </div>
     </div>
